# kshortestpaths

./: .gitignore  CMakeLists.txt  README.md  main.cpp  typedefs.h
graph/includes/: Path.h  SubGraph.h  graph.h
graph/src/: Path.cpp  SubGraph.cpp  graph.cpp
instances/: miniGrid.gr  smallInstance.kspp
results/: evaluationFinal.ipynb  evaluationGrids.ipynb  evaluationRandom.ipynb  evaluationRoads.ipynb  finalGridResults_kurz.csv  finalGridResults_na.csv  finalRandomResults_kurz.csv  finalRandomResults_na.csv  finalRoadResults_kurz.csv  finalRoadResults_na.csv  grid_instances.csv  random.inst  random_connected.inst  roadInstances.csv
search/includes/: BiobjectiveCosts.h  BiobjectiveSearch.h  BucketHeap.h  Dijkstra.h  MemoryPool.h  NewAlgorithm.h  Solution.h  Yen.h
search/src/: BiobjectiveCosts.cpp  BiobjectiveSearch.cpp  Dijkstra.cpp  NewAlgorithm.cpp  Yen.cpp
